deploy/base/dex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: dex
      app.kubernetes.io/instance: dex
      app.kubernetes.io/name: dex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: dex
        app.kubernetes.io/instance: dex
        app.kubernetes.io/name: dex
    spec:
      containers:
        - name: dex
          image: ghcr.io/dexidp/dex:v2.35.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 200Mi
          args:
            - dex
            - serve
            - /etc/dex/config.yaml
          volumeMounts:
            - name: config
              mountPath: /etc/dex
            - name: cert
              mountPath: "/etc/dex/tls"
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: dex
        - name: cert
          secret:
            secretName: dex-cert
            optional: false
      restartPolicy: Always
