deploy/base/dex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
spec:
  selector:
    app.kubernetes.io/instance: dex
    app.kubernetes.io/name: dex
  ports:
    - name: http
      port: 80
      targetPort: 8080
